# gwseg

./: .gitignore  LICENSE  README.md  cloth_nodes.txt  pyproject.toml
configs/: randlanet_semantickitti.yml  randlanet_toronto3d.yml
data_open3d_ml/Paris_Lille3D/training_50_classes_raw/: Lille1_annotations.txt  Paris_annotations.txt
scripts/: download_semantickitti.sh
src/: main.py
src/Open3D-ML/: main.py  ply_class_weights.py  ply_convert.py  ply_normalize.py  train.py
src/Open3D-ML/data/Paris_Lille3D/training_50_classes/: Lille2_annotations.txt
src/Open3D-ML/ml3d/configs/: randlanet_parislille3d_50c.yml
src/Open3D-ML/ml3d/datasets/: __init__.py  parislille3d.py  parislille3d_50_classes.py
src/Open3D-ML/scripts/download_datasets/: download_parislille3d_50_classes.sh
src/Open3D-ML/scripts/train_scripts/: randlanet_paris.sh
train_log/00001_RandLANet_ParisLille3DExtended_torch/: events.out.tfevents.1742387736.Majks-MacBook-Pro.fritz.box.69366.0
train_log/00001_RandLANet_ParisLille3D_torch/: events.out.tfevents.1742224888.Majks-MacBook-Pro.fritz.box.70870.0
train_log/00002_RandLANet_ParisLille3D_torch/: events.out.tfevents.1742225021.Majks-MacBook-Pro.fritz.box.80915.0
