[project]
name = "sidewalk-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.0.1",
    "matplotlib>=3.9.2",
    "numpy==1.26.4",
    "open3d>=0.18.0",
    "pandas>=2.2.3",
    "rasterio>=1.4.1",
    "ruff>=0.7.1",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "shapely>=2.0.6",
    "laspy[lazrs,laszip]>=2.4.1",
    "ipykernel>=6.29.5",
    "pyvista>=0.44.1",
    "torch==2.1.2",
    "torchvision==0.16.2",
    "cloth-simulation-filter>=1.1.5",
    "tensorboard>=2.18.0",
]
